# ihateborders

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml  update-scoop-manifest.yml
src/: app.rs  config.rs  main.rs  startup.rs  ui.rs  window_manager.rs
